# herald

./: .gitignore  .gitmodules  .travis.yml  ActiveGame.cxx  ActiveGame.h  Api.cxx  Api.h  CMakeLists.txt  CentralWidget.cxx  CentralWidget.h  ControlPanel.h  Engine.cxx  Engine.h  GameInfo.cxx  GameInfo.h  GameListView.h  Icons.qrc  Interpreter.cxx  Interpreter.h  Lexer.cxx  Lexer.h  MainWindow.cxx  MainWindow.h  MaterialList.cxx  MaterialList.h  MenuBuilder.cxx  PanicWidget.cxx  PanicWidget.h  Parser.cxx  Parser.h  ProcessApi.cxx  README.md  RoomBuilder.cxx  Scene.cxx  Scene.h  SceneView.cxx  SceneView.h  Texture.cxx  Texture.h  TextureList.cxx  (+8 more)
demos/c/: LICENSE.md  actions.json  game.c  info.json
demos/java/: Game.java  info.json  info.txt  model.json
docs/: BuildingOnUbuntu.md  BuildingOnWindows.md  Protocol.md
examples/java/: Game.java
icons/: CMakeLists.txt  README.md  icons.qrc
lang/: CMakeLists.txt  Interpreter.cxx  Interpreter.h  Matrix.h  ParseTree.cxx  ParseTree.h  Parser.cxx  Parser.h  Writer.cxx  Writer.h
scripts/: TravisBuild.sh  travis-build.sh
source/: Action.cxx  Action.h  ActionList.cxx  ActionList.h  ActiveGame.cxx  ActiveGame.h  ActiveGameList.cxx  ActiveGameList.h  Api.cxx  Api.h  Background.h  BackgroundModifier.cxx  BackgroundModifier.h  BackgroundView.cxx  BackgroundView.h  CMakeLists.txt  CentralWidget.cxx  CentralWidget.h  Config.h.in  ControlPanel.cxx  ControlPanel.h  Controller.h  Engine.cxx  Engine.h  ErrorLog.cxx  ErrorLog.h  GameInfo.cxx  GameInfo.h  GameList.cxx  GameList.h  GameListView.cxx  Interpreter.cxx  Interpreter.h  KeyController.cxx  KeyController.h  LegacyModelLoader.cxx  LegacyModelLoader.h  LineBuffer.cxx  LineBuffer.h  MainWindow.cxx  (+52 more)
source/common/: Angle.h  CMakeLists.txt
source/common/include/herald/: ScopedPtr.h  Vec2f.h  Vector.h
source/engine/: Action.h  ActionTable.cxx  ActionTable.h  Animation.cxx  AnimationTable.cxx  Background.h  CMakeLists.txt  Controller.h  DefaultBackground.cxx  DefaultBackground.h  DefaultEngine.cxx  DefaultEngine.h  DefaultModel.cxx  DefaultModel.h  DefaultRoom.cxx  DefaultRoom.h  DefaultTile.cxx  DefaultTile.h  Engine.h  Index.h  JsonModel.cxx  JsonModelTest.cxx  Model.h  Object.cxx  Object.h  ObjectTable.cxx  QtBackground.cxx  QtBackground.h  QtDemo.cxx  QtEngine.cxx  QtEngine.h  QtKeyController.cxx  QtKeyController.h  QtModel.cxx  QtModel.h  QtObject.cxx  QtObject.h  QtObjectTable.cxx  QtObjectTable.h  QtRoom.cxx  (+11 more)
source/engine/include/herald/: Action.h  Animation.h  AnimationTable.h  Background.h  Controller.h  JsonModel.h  Model.h  Object.h  ObjectTable.h  QtEngine.h  QtTarget.h  TextureTable.h
source/lang/: CMakeLists.txt  Command.cxx  Command.h  Interpreter.h  Lexer.cxx  Lexer.h  LexerTest.cxx  Matrix.cxx  Matrix.h  ParseTree.cxx  ParseTree.h  Parser.cxx  Parser.h  ParserTest.cxx  ScopedPtr.h  SyntaxChecker.cxx  SyntaxChecker.h  SyntaxCheckerTest.cxx  Token.cxx  Token.h  Writer.cxx  Writer.h
source/protocol/: CMakeLists.txt  Command.cxx  Lexer.cxx  Lexer.h  LexerTest.cxx  ParseTree.cxx  ParseTree.h  Parser.cxx  Parser.h  ParserTest.cxx  SyntaxChecker.cxx  SyntaxCheckerTest.cxx  Token.cxx
source/protocol/include/herald/protocol/: Command.h  ParseTree.h  Parser.h  SyntaxChecker.h  Token.h
source/sysinfo/: CMakeLists.txt  Example.cxx  ProgramFinder.cxx  Registry.cxx
source/sysinfo/include/herald/sysinfo/: ProgramFinder.h  Registry.h
source/toolkit/: ActionEditor.cxx  ActionEditor.h  AnimationEditor.cxx  AnimationEditor.h  CMakeLists.txt  CodeEditor.cxx  CodeEditor.h  Console.cxx  Console.h  GameInfo.cxx  GameInfo.h  GameList.cxx  GameList.h  GameProcess.cxx  GameProcess.h  GraphicsView.cxx  GraphicsView.h  JavaLanguage.cxx  JavaLanguage.h  Language.cxx  Language.h  Manager.cxx  Manager.h  ProcessQueue.cxx  ProcessQueue.h  Project.cxx  Project.h  ProjectManager.cxx  ProjectManager.h  ProjectModel.cxx  ProjectModel.h  ProjectView.cxx  ProjectView.h  PythonLanguage.cxx  PythonLanguage.h  README.md  RoomEditor.cxx  RoomEditor.h  RoomMediator.cxx  RoomMediator.h  (+41 more)
source/toolkit/templates/java/: Game.java
source/toolkit/templates/python/: __main__.py
